--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 asyncpg==0.29.0
+bcrypt==3.2.0
 certifi==2024.8.30
+cffi==1.17.1
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.2.0
@@ -19,6 +21,8 @@ Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+passlib==1.7.4
+pycparser==2.22
 pydantic==2.9.1
 pydantic-settings==2.5.2
 pydantic_core==2.23.3
@@ -28,6 +32,7 @@ python-multipart==0.0.9
 PyYAML==6.0.2
 rich==13.8.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 sqlmodel==0.0.22
